--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.2.0",
-    "@supabase/supabase-js": "^2.89.0",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-navigation/native": "7.1.26",
+    "@react-navigation/native-stack": "7.9.0",
+    "@supabase/supabase-js": "2.89.0",
     "react": "18.3.1",
     "react-native": "0.76.6",
-    "react-native-safe-area-context": "^5.6.2",
-    "react-native-url-polyfill": "^3.0.0"
+    "react-native-safe-area-context": "5.6.2",
+    "react-native-screens": "4.4.0",
+    "react-native-url-polyfill": "3.0.0",
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -29,6 +33,7 @@
     "@react-native/metro-config": "0.76.6",
     "@react-native/typescript-config": "0.76.6",
     "@types/react": "^18.2.6",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
